슬라이더 마크업

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-#slider-wrap {width: 100%; height: 400px; position: relative;}
-#slider-wrap #slider { width: 100%; height: 100%; overflow: hidden; }
-#slider-wrap #slider .slide { width: 100%; height: 100%; }
-#slider-wrap .slider-btns { position: absolute; top: 50%; transform: translateY(-50%); display: flex; justify-content: space-between; width: 100%;  }
-#slider-wrap .slider-btns button { cursor: pointer; }
+* { margin: 0; padding: 0;}
+ul { list-style: none; }
+#slider-wrap {width: 100%; height: 400px; position: relative; }
+#slider-wrap #slider { width: 100%; height: 100%; display: flex; flex-wrap: wrap; flex-direction: column; }
+#slider-wrap #slider li.slide { width: 100%; height: 100%; }
+#slider-wrap .slider-btn-wrap { position: absolute; top: 50%; transform: translateY(-50%); display: flex; justify-content: space-between; width: 100%;  }
+#slider-wrap .slider-btn-wrap button { cursor: pointer; border: none; background: inherit; }
