--- a/style.css
+++ b/style.css
@@ -5,3 +5,6 @@ ul { list-style: none; }
 #slider-wrap #slider li.slide { width: 100%; height: 100%; }
 #slider-wrap .slider-btn-wrap { position: absolute; top: 50%; transform: translateY(-50%); display: flex; justify-content: space-between; width: 100%;  }
 #slider-wrap .slider-btn-wrap button { cursor: pointer; border: none; background: inherit; }
+#slider-wrap ul.pagination-wrap { position: absolute; left: 50%;  bottom: 3vw; transform: translateX(-50%); }
+#slider-wrap ul.pagination-wrap li { background: aliceblue; cursor: pointer; width: 2vw; height: 2vw; border-radius: 50%; float: left; margin: 1vw; }
+#slider-wrap ul.pagination-wrap li.active { background: black; }
